All doors control

--- a/doors.html
+++ b/doors.html
@@ -33,8 +33,8 @@
                                 <div
                                     style="display: flex; flex-direction: column; justify-content: flex-start; align-items: center; margin-top: 10%;">
                                     <p class="app-name" style="margin: 0; font-size: medium;">UP</p>
-                                    <input type="range" oninput="windows(this)" min="1" orient="vertical" max="100" value="100"
-                                        class="sliderdoors" id="janela1">
+                                    <input type="range" oninput="windows(this)" min="1" orient="vertical" max="100"
+                                        value="100" class="sliderdoors" id="janela1">
                                     <p class="app-name" style="margin: 0; font-size: medium;">DOWN</p>
                                 </div>
                                 <div class="item"
@@ -54,8 +54,8 @@
                                 <div
                                     style="display: flex; flex-direction: column; justify-content: flex-start; align-items: center; margin-top: 10%;">
                                     <p class="app-name" style="margin: 0; font-size: medium;">UP</p>
-                                    <input type="range" oninput="windows(this)" min="1" orient="vertical" max="100" value="100"
-                                        class="sliderdoors" id="janela2">
+                                    <input type="range" oninput="windows(this)" min="1" orient="vertical" max="100"
+                                        value="100" class="sliderdoors" id="janela2">
                                     <p class="app-name" style="margin: 0; font-size: medium;">DOWN</p>
                                 </div>
                                 <div class="item"
@@ -72,7 +72,16 @@
 
                         </div>
                     </div>
-                    <img class="fadeinbottom" src=" ./img/tesla-up.png" width="25%" alt="Car">
+                    <img class="fadeinbottom teslaa" src=" ./img/tesla-up.png"  width="25%" alt="Car">
+                    <div class="item door-modal"
+                        style="display: flex; justify-content: center; align-items: center; width: 125px; height: 125px; position: absolute;">
+                        <div class="door9" onclick="lockDoors(this)"
+                            style="display: flex; flex-direction: column; justify-content: flex-end; align-items: center;">
+                            <img id="door9" src="./img/doors/lock.svg" width="55%">
+                            <p style="margin: 0; padding-top: 10%; font-size:medium;" class="app-name">
+                                ALL DOORS</p>
+                        </div>
+                    </div>
                     <div style="height: 100%; width: 35%; display: flex; justify-content: flex-start; margin-left: 5%;">
                         <div
                             style="display: flex; flex-direction: column; height: 100%; width: 100%; justify-content: space-between;">
@@ -108,8 +117,8 @@
                                 <div
                                     style="display: flex; flex-direction: column; justify-content: flex-start; align-items: center; margin-top: 10%;">
                                     <p class="app-name" style="margin: 0; font-size: medium;">UP</p>
-                                    <input type="range" min="1" oninput="windows(this)" orient="vertical" max="100" value="100"
-                                        class="sliderdoors" id="janela4">
+                                    <input type="range" min="1" oninput="windows(this)" orient="vertical" max="100"
+                                        value="100" class="sliderdoors" id="janela4">
                                     <p class="app-name" style="margin: 0; font-size: medium;">DOWN</p>
                                 </div>
                             </div>
