Warning Scenario Tire Pressure

--- a/car.html
+++ b/car.html
@@ -33,7 +33,7 @@
                         <div style="height: 100%; width: 40%; display: flex; justify-content: flex-end;">
                             <div style="display: flex; flex-direction: column; height: 100%; width: 40%; justify-content: space-between;">
                             <div style="display: flex; justify-content: flex-end; margin-top: 45%;margin-right: 5%; align-items: flex-start;">
-                                <p class="fadeinbottom" style="margin-top: 3%; margin-right: 10%;font-weight: bold;">2.3 <span class="opacity-letters">bar</span></p>
+                                <p class="fadeinbottom" style="margin-top: 3%; margin-right: 10%;font-weight: bold;" id="low-pressure">2.3 <span class="opacity-letters">bar</span></p>
                                 <img class="fadeinbottom" src=" ./img/car/tire-pressure.svg" width="20%" alt="Car">
                             </div>
                             <div style="display: flex; justify-content: flex-end; margin-bottom: 25%;margin-right: 5%; align-items: flex-start;">
