--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div class="container">
         <div class="top-info">
             <div class="info">
-                <p id="hours" style="font-weight: bold;">19:20</p>
+                <p id="hours" onclick="warningPressure()" style="font-weight: bold;">19:20</p>
                 <p id="date" class="opacity-letters">Friday, 5 May 2020</p>
                 <p id="temperature" style="font-weight: bold;">22</p>
                 <p style="margin-left: 0;"" class=" opacity-letters">ºC</p>
