Open settings when warning of bluetooth appear

--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
                         <div
                             style="height: 35%; width:100%; display: flex; flex-direction: column-reverse; align-items: center;">
                             <div class="settings-box" style="width: 25%; height: 35%;"
-                                onclick="document.getElementsByClassName('warning-modal')[0].style.display= 'none'">OK
+                                onclick="okWarning()">OK
                             </div>
                         </div>
                     </div>
